# website-builder

./: .devconfig.yml  .env.example  .gitignore  LICENSE  README.md  SETUP_SUCCESS.md  check_status.bat  e2e_test.py  package-lock.json  package.json  setup.bat  setup.ps1  show_config.py  start.bat  start_ollama_only.bat  sync_files.py  test_ollama.py
backend/: config.py  diagnose.py  llm.py  llm_simple.py  main.py  main_simple.py  pyproject.toml  simple_test.py  start.py  test_integration.py  utils.py
backend/fs_logging/: core.py
backend/models/: __init__.py  ollama_client.py
backend/prompts/: __init__.py  website_prompts.py
backend/routes/: generate_code.py  ollama_api.py
backend/services/: __init__.py  prompt_manager.py
backend/video/: utils.py
docs/: GETTING_STARTED.md  INDEX.md  INTEGRATION_COMPLETE.md
frontend/: package.json
frontend/src/: App.tsx  App.tsx.backup  config.ts  generateCodeLocal.ts  main.tsx
frontend/src/lib/: models.ts
frontend/src/tests/: qa.test.ts
jules-scratch/verification/: verify_simplified_ui.py
scripts/: fix_issues.bat  setup.sh  setup_fixed.ps1
tools/: quick_test.py  simple_backend_test.py
