[tool.poetry]
name = "website-builder-backend"
version = "1.0.0"
description = "Backend for Website Builder with AI Screenshot-to-Code functionality"
authors = ["Website Builder Team"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
websockets = "^14.1"
beautifulsoup4 = "^4.12.3"
httpx = "^0.28.1"
aiohttp = "^3.10.11"
pydantic = "^2.10.2"
pillow = "^11.0.0"
types-pillow = "*"
# Development tools
pre-commit = {version = "^4.0.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pyright = "^1.1.390"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.poetry.extras]
dev = ["pre-commit"]
all = ["pre-commit"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
